--- a/Doan/Views/Home/Index.cshtml
+++ b/Doan/Views/Home/Index.cshtml
@@ -6,33 +6,36 @@
 
 
 <div class="col-sm-9 padding-right">
+
+    <!--Phần xử lý bán chạy-->
     <div class="features_items">
         <!--features_items-->
         <h2 class="title text-center">SẢN PHẨM BÁN CHẠY</h2>
         @foreach (var item in Model)
         {
-        <div class="col-sm-4">
-            <div class="product-image-wrapper">
-                <div class="single-products">
-                    <div class="productinfo text-center">
-                        <img src="~/Asset/images/home/@item.HinhAnh" alt="" />
-                        <h2>@item.Gia VND</h2>
-                        <p>@item.TenSanPham</p>
-                        <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
-                    </div>
-                    <div class="product-overlay">
-                        <div class="overlay-content">
+            <div class="col-sm-4">
+                <div class="product-image-wrapper">
+                    <div class="single-products">
+                        <div class="productinfo text-center">
+                            <img src="~/Asset/images/home/@item.HinhAnh" alt="" />
                             <h2>@item.Gia VND</h2>
                             <p>@item.TenSanPham</p>
                             <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
                         </div>
+                        <div class="product-overlay">
+                            <div class="overlay-content">
+                                <h2>@item.Gia VND</h2>
+                                <p>@item.TenSanPham</p>
+                                <a href="#" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Thêm vào giỏ hàng</a>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
-              
             </div>
-        </div>
         }
     </div>
+
 
     <div class="features_items">
         <!--features_items-->
@@ -54,7 +57,7 @@
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
     </div>
